<resources>
    <string name="app_name">The Honeycomb Works</string>
    <string name="start_text">Know what you want to work on? Let\'s get started.</string>
    <string name="txt">If you want to change a habit or learn something new you\'re more likely to be successful when you:</string>
    <string name="first_point">1. Write it down</string>
    <string name="second_point">2. Set time aside to work on the change you want to make</string>
    <string name="third_point">3. Identify what could stop you</string>
    <string name="fourth_point">4. Plan what you\'ll do to stay on track</string>
    <string name="message_start">Click \'Start\' and we\'ll walk you through it. We\'ll also send you reminders over the next few weeks to keep you on track</string>
    <string name="complete_time">4 min to complete</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <string name="datepicker">datePicker</string>
    <string name="date">Date:</string>
    <string name="dateHint">click calender image for date</string>
    <string name="trackLocation">Track My Location</string>
    <string name="answerHint">Enter your answer here</string>
    <string name="calenderHint">Click calender image</string>
    <string name="geoHint">Click trackMyLocation button</string>
    <string name="message">We\'ll email your commitment plan to you, send you reminders and follow up to see how you got on</string>
    <string name="event">Add Event To Calender</string>
    <string name="thankMessage">Thanks</string>
    <string name="percent">% completed</string>
</resources>