<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:id="@+id/first_relative_layout">

     <TextView
         android:id="@+id/start_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="@string/start_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt"
        android:id="@+id/txt1"
        android:layout_below="@id/start_txt"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_point"
        android:id="@+id/txt_1st_Point"
        android:layout_below="@id/txt1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_point"
        android:id="@+id/txt_2nd_point"
        android:layout_below="@id/txt_1st_Point"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txt_3rd_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_2nd_point"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/third_point" />

    <TextView
        android:id="@+id/txt_4th_Point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_3rd_point"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/fourth_point" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_start"
        android:id="@+id/txt_message"
        android:layout_below="@id/txt_4th_Point"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_time"
        android:id="@+id/txt_com_time"
        android:layout_below="@id/txt_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    </RelativeLayout>

 <Button
     android:id="@+id/btn"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/first_relative_layout"
     android:layout_centerInParent="true"
     android:layout_marginTop="25dp"
     android:backgroundTint="@color/Bolt"
     android:padding="20dp"
     android:fontFamily="@font/lato_bold"
     android:text="@string/start" />

</RelativeLayout>